# RecirculationSurfaces

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMakeModules/: FindLZ4.cmake
inc/: amiradataset.hh  critextractor.hh  doublegyre3D.hh  evaluator.hh  flow.hh  flowsampler.hh  globals.hh  hyperline.hh  hyperpoint.hh  iobase.hh  iorecpointfile.hh  jobparams.hh  jobworker.hh  math.hh  mergetool.hh  recpoint.hh  types.hh  utils.hh  vectorcuboid.hh
src/: amiradataset.cc  critextractor.cc  doublegyre3D.cc  globals.cc  hyperline.cc  hyperpoint.cc  iobase.cc  iorecpointfile.cc  jobworker.cc  main.cc  vectorcuboid.cc
